testsuite/bsc.evaluator/fileIO/SetBufferingAfterClose.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling SetBufferingAfterClose.bsv
code generation for sysSetBufferingAfterClose starts
Error: "Prelude.bs", line 3819, column 20: (S0085)
  Failure during a file handle operation:
    illegal operation
  During elaboration of `hSetBuffering' at "SetBufferingAfterClose.bsv", line
  10, column 4.
  During elaboration of `sysSetBufferingAfterClose' at
  "SetBufferingAfterClose.bsv", line 2, column 8.
